# lib_nc-occ

./: LICENSE  Makefile  README.md  pyproject.toml  start.py
lib_occ/: logic.py  nc_occ.py  occ_class_creation.py  occ_command_lib.py  occ_transformer.py  process.sh  start.py
lib_occ/creation/: occ_class_creation.py  occ_command_lib.py  occ_list.txt  occ_transformer.py
lib_occ/lib/: __init__.py  activity_occ.py  admindelegation_occ.py  app_occ.py  appapi_occ.py  background_occ.py  backgroundjob_occ.py  bookmarks_occ.py  broadcast_occ.py  calendar_occ.py  circles_occ.py  common_occ.py  config_occ.py  dav_occ.py  db_occ.py  encryption_occ.py  federation_occ.py  files_occ.py  group_occ.py  info_occ.py  integrity_occ.py  l10n_occ.py  log_occ.py  maintenance_occ.py  memcache_occ.py  metadata_occ.py  migrations_occ.py  notification_occ.py  photos_occ.py  preview_occ.py  router_occ.py  security_occ.py  serverinfo_occ.py  share_occ.py  sharing_occ.py  support_occ.py  tables_occ.py  tag_occ.py  talk_occ.py  taskprocessing_occ.py  (+9 more)
src/: __init__.py  __main__.py
src/lib_occ/: logic.py  process.sh
src/lib_occ/creation/: __init__.py  occ_class_creation.py  occ_transformer.py
src/lib_occ/lib/: activity_occ.py  app_occ.py  appapi_occ.py  bookmarks_occ.py  broadcast_occ.py  circles_occ.py  db_occ.py  encryption_occ.py  files_occ.py  group_occ.py  info_occ.py  integrity_occ.py  l10n_occ.py  maintenance_occ.py  memcache_occ.py  metadata_occ.py  notification_occ.py  preview_occ.py  serverinfo_occ.py  support_occ.py  talk_occ.py  taskprocessing_occ.py  text_occ.py  trashbin_occ.py  (+3 more)
